classDiagram

    ScooterApp --* Scooter 
    ScooterApp --* User

    User -- Scooter: Rent
    User -- Scooter: Dock
    User -- Scooter: Request Repair
    User -- Scooter: Recharge

    class Scooter {
        +string station
        +string user
        +number serial = Math.floor(Math.random()*1000)
        +number charge = Math.floor(Math.random()*100)
        +boolean isBroken = false
        +boolean docked = true

        +rent()
        +dock(station)
        +recharge()
        +requestRepair()
    }

    class User {
        -string username
        -string password
        -number age 
    }

    class ScooterApp {
        -array static stations
        -array static registeredUsers 

        +register(user)
        +logIn(username, password)
        -addScooter(location,scooter)
        +RemoveScooter(scooterToRemove)
    }